hphp/test/zend/good/ext/pdo/tests/pdo_037.php.expectf

Fatal error: Call to undefined method MyStatement::foo() in %s/pdo_037.php on line 8
